--- a/q/274973.html
+++ b/q/274973.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>Vyxal</td><td>240814T221128Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274987#274987">emanresu</a></td></tr>
-<tr d-ix="1"><td>007</td><td>Pyth</td><td>240815T205833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/275007#275007">CursorCo</a></td></tr>
-<tr d-ix="2"><td>019</td><td>Uiua</td><td>240815T205321Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/275006#275006">Marcos G</a></td></tr>
-<tr d-ix="3"><td>014</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>014</td><td>Haskell + hgl</td><td>240814T143415Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274976#274976">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>007</td><td>Vyxal</td><td>240814T221128Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274987#274987">emanresu</a></td></tr>
+<tr d-ix="2"><td>007</td><td>Pyth</td><td>240815T205833Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/275007#275007">CursorCo</a></td></tr>
+<tr d-ix="3"><td>019</td><td>Uiua</td><td>240815T205321Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/275006#275006">Marcos G</a></td></tr>
 <tr d-ix="4"><td>046</td><td>Bash</td><td>240815T172957Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/275003#275003">GammaFun</a></td></tr>
 <tr d-ix="5"><td>008</td><td>Jelly</td><td>240814T175309Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274982#274982">Jonathan</a></td></tr>
 <tr d-ix="6"><td>021</td><td>APLDyalog Unicode</td><td>240815T145322Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/275002#275002">akamayu</a></td></tr>
@@ -45,53 +45,7 @@
 <tr d-ix="16"><td>044</td><td>JavaScript ES6</td><td>240814T150830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274977#274977">Arnauld</a></td></tr>
 <tr d-ix="17"><td>011</td><td>Japt v2.0a0</td><td>240814T141527Z</td><td><a href="https://codegolf.stackexchange.com/questions/274973/erase-the-loops/274974#274974">noodle p</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
-<pre><code>hṡt)↔∩h
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiaOG5oXQp4oaU4oipaCIsIiIsInhcbnh4eHhcbmlvaW9pb2lvXG5cIjEyMzQzMjFcIlxueHl6eHl6eHl6XG5cIjEyMzIxMzEzMlwiXG5hYmNiYmNkZWFlZWMiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/274982/100664">Jonathan Allan's Jelly answer</a>, go upvote that!</p>
-<p>Note: Due to a Vyxal bug, this uses <code>ṡ</code> (regex split) instead of <code>/</code> (regular split), so this can't handle any regex special characters. Everything else should work fine though.</p>
-<pre><code>    ↔   # Collect while the result is unique
----)    # Last four elements as a lambda
- ṡ      # Split
-h       # On first character
-  t     # And get the last item
-     ∩h # Take the head of each collected string
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 7 bytes</h1>
-<pre><code>#=ecQph
-</code></pre>
-<p><a href="https://tio.run/##K6gsyfj/X9k2NTmwAMhQSkxKTkpKTklNTE1NVgIA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
-<p>Uses the same principle as <a href="https://codegolf.stackexchange.com/a/274982/73054">Jonathan Allan's Jelly answer</a>, be sure to upvote that as well.</p>
-<h3>Explanation</h3>
-<pre><code>#=ecQphQ    # implicitly add Q
-            # implicitly assign Q = eval(input())
-#           # loop until error
-      hQ    # take the first element of Q (will error when Q is the empty string)
-     p      # print with no trailing newline
-   cQ       # split Q on instances of this character
-  e         # take the last element of the split
- =  Q       # assign to Q
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1>Uiua, 19 bytes</h1>
-<pre><code>⍥⍣(▽≠1\+⊸=⊢⊸▽¬⊸◰)∘∞
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_12_0-rc_2__JCBhYmNiYmNkZWFlZWMKCuKNpeKNoyjilr3iiaAxXCviirg94oqi4oq44pa9wqziirjil7Ap4oiY4oieCg==" rel="nofollow noreferrer">Try it online!</a></p>
-<h3>Explanation</h3>
-<pre><code>⍥⍣(▽≠1\+⊸=⊢⊸▽¬⊸◰)∘∞
-
-⍥⍣(             )∘∞ # repeat until error (fixed point)
-             ¬⊸◰    # mask of all duplicates
-          ⊢⊸▽       # get the first
-        ⊸=          # mask where the string equals the duplicate
-      \+            # accumulative addition
-                    # - positions equal to 1 are between the first 2 chars
-   ▽≠1              # remove the part in between
-</code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> <s>28</s> 14 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>31</s> <s>30</s> <s>29</s> <s>28</s> 14 bytes</h1>
 <pre><code>ysk$yS$hdS&lt;*h'
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TY7PCoJAEMbvPsUgQn_Ig2uHDnrpCQSPEbG6Iy6urukKbQ_RC3TxEl17Hd-mpQ1rZmDm-803MPdnSfsKhRinPa9b2Sk4D1TwgiODpEMxMHS-i8TxfWikAtkAVRI0Kkf3FcSgdQ4R9NVjUIW_exWxwZ5OvZKl0bpcWDzdasob42bSAahPsGw7c1WsjAI4gHtxP9PGTCZmwaXNGQQk3IYk-Ln11da_gwRhEJKZ0CzPspwhRcwtPNqvxtH2Nw" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -117,6 +71,53 @@ And it should probably have preloaded variants for <code>h'</code> and <code>h_<
 <li>There should be an analog to <code>tk</code> (<code>take</code>) that takes off the back of the list. This would make it easier to check if a section starts and ends with the same thing.</li>
 <li><code>(@~)</code> should have higher precedence than <code>(&lt;)</code>. Currently it's just at the default.</li>
 </ul>
+<p>Of course none of these suggestions would actually end up making a shorter answer.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<pre><code>hṡt)↔∩h
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiaOG5oXQp4oaU4oipaCIsIiIsInhcbnh4eHhcbmlvaW9pb2lvXG5cIjEyMzQzMjFcIlxueHl6eHl6eHl6XG5cIjEyMzIxMzEzMlwiXG5hYmNiYmNkZWFlZWMiXQ==" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/274982/100664">Jonathan Allan's Jelly answer</a>, go upvote that!</p>
+<p>Note: Due to a Vyxal bug, this uses <code>ṡ</code> (regex split) instead of <code>/</code> (regular split), so this can't handle any regex special characters. Everything else should work fine though.</p>
+<pre><code>    ↔   # Collect while the result is unique
+---)    # Last four elements as a lambda
+ ṡ      # Split
+h       # On first character
+  t     # And get the last item
+     ∩h # Take the head of each collected string
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 7 bytes</h1>
+<pre><code>#=ecQph
+</code></pre>
+<p><a href="https://tio.run/##K6gsyfj/X9k2NTmwAMhQSkxKTkpKTklNTE1NVgIA" rel="nofollow noreferrer" title="Pyth – Try It Online">Try it online!</a></p>
+<p>Uses the same principle as <a href="https://codegolf.stackexchange.com/a/274982/73054">Jonathan Allan's Jelly answer</a>, be sure to upvote that as well.</p>
+<h3>Explanation</h3>
+<pre><code>#=ecQphQ    # implicitly add Q
+            # implicitly assign Q = eval(input())
+#           # loop until error
+      hQ    # take the first element of Q (will error when Q is the empty string)
+     p      # print with no trailing newline
+   cQ       # split Q on instances of this character
+  e         # take the last element of the split
+ =  Q       # assign to Q
+</code></pre>
+</div>
+<div id="pu3" class="pu"><h1>Uiua, 19 bytes</h1>
+<pre><code>⍥⍣(▽≠1\+⊸=⊢⊸▽¬⊸◰)∘∞
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_12_0-rc_2__JCBhYmNiYmNkZWFlZWMKCuKNpeKNoyjilr3iiaAxXCviirg94oqi4oq44pa9wqziirjil7Ap4oiY4oieCg==" rel="nofollow noreferrer">Try it online!</a></p>
+<h3>Explanation</h3>
+<pre><code>⍥⍣(▽≠1\+⊸=⊢⊸▽¬⊸◰)∘∞
+
+⍥⍣(             )∘∞ # repeat until error (fixed point)
+             ¬⊸◰    # mask of all duplicates
+          ⊢⊸▽       # get the first
+        ⊸=          # mask where the string equals the duplicate
+      \+            # accumulative addition
+                    # - positions equal to 1 are between the first 2 chars
+   ▽≠1              # remove the part in between
+</code></pre>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 46 bytes</h1>
 
