--- a/q/183390.html
+++ b/q/183390.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
+<tr d-ix="0"><td>043</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
 <tr d-ix="1"><td>008</td><td>Jelly</td><td>201030T113958Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/214421#214421">ais523</a></td></tr>
 <tr d-ix="2"><td>118</td><td>TSQL</td><td>190418T035042Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183428#183428">t-clause</a></td></tr>
 <tr d-ix="3"><td>047</td><td>J</td><td>190419T045248Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183477#183477">Jonah</a></td></tr>
@@ -48,11 +48,11 @@
 <tr d-ix="19"><td>019</td><td>Pyth</td><td>190417T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183391#183391">Sok</a></td></tr>
 <tr d-ix="20"><td>144</td><td>Wolfram Language Mathematica</td><td>190417T143335Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183395#183395">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> 58 bytes</h1>
-<pre><code>-Fold[#&amp;@@{a,a~Join~{#2},a=#,{#2}}~SortBy~Tr&amp;,a={∞},-#]&amp;
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> 43 bytes</h1>
+<pre><code>Union@Subsets[#][[2;;,;;;;2]]~MaximalBy~Tr&amp;
 </code></pre>
-<p><a href="https://tio.run/##JY/NisIwFIX3fY1CF8O5mKSt1kWhuHDhShh3MoswKhZGCzUbCenap/DhfJHOvQn54cvJveckN@uu55t1/a@dL@1M2@HvdMyLrvMWdtoN/X3yuQmwbQ6BMH0Po9s8p8NYsOg/r3cA5T/F7M4P92h95jUMSpAGlUx1QOYr1KhQCtaMWvGUlW61ijt4CHDbiqvJoEp6OiU24kritwStRGvYiUoNxaMyXG2W0UX6GhAHsx4TmEk30YAfl1JV8pN2Wq8lVIUsZPuxv7vu67Lo4rfmfw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<p>Same approach as my <a href="https://codegolf.stackexchange.com/a/266070">Python solution</a> to the related <a href="https://codegolf.stackexchange.com/q/265382">maximum sum problem</a>, with the minor difference that values can be negative here.</p>
+<p><a href="https://tio.run/##JU/LCsIwELz3NwQPsotJ@rClFIp3QVBPpYcoLQZshTaCUtpfr7tJNgmTyc5M0mn7bDptzUOvbbHeevPuy8vnPjZ2rDZ1Vak8h5yGquvlpL@m06/jb7kO29U2ox2LKZgkKAgBJWBIKJ4hmCKIIYKQYUxQCpq8/K0UbgcqBiQ7UDcqiDzvTx4rdkX2SwAPzKXkhKEEQRUp6laJc2FdCkjBxLsEwihTZ0CP86nC@7Ecs4xDxRzMwXkwvS137b5031r/" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/214421/81203">ais523's Jelly solution</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>ŒPm€2SÞṪ
