--- a/q/103403.html
+++ b/q/103403.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Bash</td><td>161217T013756Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/103407#103407">Digital </a></td></tr>
-<tr d-ix="1"><td>073</td><td>Red</td><td>240815T082239Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/274994#274994">Galen Iv</a></td></tr>
-<tr d-ix="2"><td>043</td><td>Fortran GFortran</td><td>240815T041812Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/274993#274993">roblogic</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Fortran GFortran</td><td>240815T041812Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/274993#274993">roblogic</a></td></tr>
+<tr d-ix="1"><td>038</td><td>Bash</td><td>161217T013756Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/103407#103407">Digital </a></td></tr>
+<tr d-ix="2"><td>073</td><td>Red</td><td>240815T082239Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/274994#274994">Galen Iv</a></td></tr>
 <tr d-ix="3"><td>063</td><td>Excel VBA</td><td>170822T175321Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/140094#140094">Taylor R</a></td></tr>
 <tr d-ix="4"><td>073</td><td>Excel</td><td>240814T044825Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/274968#274968">Taylor R</a></td></tr>
 <tr d-ix="5"><td>105</td><td>Swift</td><td>240814T135950Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/274972#274972">Daniel</a></td></tr>
@@ -95,7 +95,15 @@
 <tr d-ix="66"><td>018</td><td>MATL</td><td>161217T013712Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/103406#103406">Luis Men</a></td></tr>
 <tr d-ix="67"><td>023</td><td>Pyth</td><td>161217T011942Z</td><td><a href="https://codegolf.stackexchange.com/questions/103403/print-the-f-%c3%97-f-times-table/103405#103405">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 38</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, 41 bytes</h1>
+<pre class="lang-pascal prettyprint-override"><code>print'(16Z3.2)',((j*i,j=0,15),i=0,15)
+end
+</code></pre>
+<p><a href="https://tio.run/##S8svKilKzNNNT4Mw/v8vKMrMK1HXMDSLMtYz0lTX0dDI0srUybI10DE01dTJhNBcqXkp//8DAA" rel="nofollow noreferrer">Try it online!</a>  
+<s><sub><a href="https://tio.run/##S8svKilKzNNNT4Mw/v8vKMrMK1HXMDTTiDLWM9LUVNfR0MjSytTJsjXQMTTV1MmE0FypeSn//wMA" rel="nofollow noreferrer">43 bytes</a></sub></s>
+<s><sub><a href="https://tio.run/##S8svKilKzNNNT4Mw/v9PyVfItDXQMTTlKijKzCtR1zA004gy1jPS1FTX0cjSytTJAstqcqXmpaTkg8j//wE" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">50 bytes</a></sub></s></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 38</h1>
 <ul>
 <li>1 byte saved thanks to @MitchellSpector</li>
 <li>2 bytes saved thanks to @roblogic</li>
@@ -119,17 +127,10 @@ jot -s\  -w%02x 16 0 - '{0..15}
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/P7UsMUdBnSsrv0RBtzhGQUG3XNXAqELB0EzBQEFXQb3aQE/P0LT2/38A" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 73 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://www.red-lang.org" rel="nofollow noreferrer">Red</a>, 73 bytes</h1>
 <pre><code>repeat i 16[repeat j 16[prin to-hex/size i - 1 *(j - 1)2 prin&quot; &quot;]print&quot;&quot;]
 </code></pre>
 <p><a href="https://tio.run/##K0pN@R@UmhId@78otSA1sUQhU8HQLBrKzgKxC4oy8xRK8nUzUiv0izOrUoEqdBUMFbQ0skC0ppECSIGSglIsiC5RUor9/x8A" rel="nofollow noreferrer" title="Red – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, 43 bytes</h1>
-<pre class="lang-pascal prettyprint-override"><code>print'(16(Z3.2))',((j*i,j=0,15),i=0,15)
-end
-</code></pre>
-<p><a href="https://tio.run/##S8svKilKzNNNT4Mw/v8vKMrMK1HXMDTTiDLWM9LUVNfR0MjSytTJsjXQMTTV1MmE0FypeSn//wMA" rel="nofollow noreferrer">Try it Online!</a>  
-<s><sub><a href="https://tio.run/##S8svKilKzNNNT4Mw/v9PyVfItDXQMTTlKijKzCtR1zA004gy1jPS1FTX0cjSytTJAstqcqXmpaTkg8j//wE" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">50 bytes</a></sub></s></p>
 </div>
 <div id="pu3" class="pu"><h1>Excel VBA, 63 Bytes</h1>
 
