--- a/q/248352.html
+++ b/q/248352.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>073</td><td>Uiua</td><td>240730T160016Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/274577#274577">Europe20</a></td></tr>
+<tr d-ix="0"><td>056</td><td>Uiua</td><td>240730T160016Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/274577#274577">Europe20</a></td></tr>
 <tr d-ix="1"><td>014</td><td>Haskell + hgl</td><td>240730T141436Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/274575#274575">Wheat Wi</a></td></tr>
 <tr d-ix="2"><td>008</td><td>Pip</td><td>220608T225059Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/248382#248382">emanresu</a></td></tr>
 <tr d-ix="3"><td>1264</td><td>JavaScript ES6</td><td>220608T134706Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/248360#248360">Arnauld</a></td></tr>
@@ -69,21 +69,21 @@
 <tr d-ix="40"><td>055</td><td>Retina 0.8.2</td><td>220608T134109Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/248358#248358">Neil</a></td></tr>
 <tr d-ix="41"><td>007</td><td>05AB1E</td><td>220608T134018Z</td><td><a href="https://codegolf.stackexchange.com/questions/248352/count-a-z-ig-with-a-z-ig/248357#248357">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, score 0, <s>85</s> 73 bytes</h1>
-<pre><code>reduceaddnotmemflipjoionnegaaddstringifyA ranaddfloetaunsqraddceipifloeta
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, score 0, <s>85</s> <s>73</s> 56 bytes</h1>
+<pre><code>reduceaddnotmemjoionnegaaddstringifyA ranfloaddpipowpi e
 </code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__IyBFeHBlcmltZW50YWwhCkYg4oaQIC8rwqziiIo64oqC4p-cwq8rc3RyaW5naWZ5QSDih6Er4oyKzrfCsOKImivijIjPgOKMis63CkYgImV4YW1wbGUiCkYgIjN4YW1wbDMiCkYgIkhlbGxvLCBXb3JsZCEiCkYgImFiYy5kZWYtIgpGICIgICAgICIKRiAiSVQnUyBOT1JNQUwiCkYgIuKAosKlwqXigqw_Pz8hISEiCkYgImFiY1xuZGVmIgo=" rel="nofollow noreferrer">Try it here!</a></p>
-<p>Requires a <code># Experimental!</code> comment at the beginning.</p>
-<p>Formats to <code>/+¬∊:⊂⟜¯+stringifyA ⇡+⌊η°√+⌈π⌊η</code>.</p>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-rc_2__IyBFeHBlcmltZW50YWwhCkYg4oaQIC8rwqziiIjiioLin5zCrytzdHJpbmdpZnlBIOKHoeKMiivPgOKBv8-AIGUKRiAiZXhhbXBsZSIKRiAiM3hhbXBsMyIKRiAiSGVsbG8sIFdvcmxkISIKRiAiYWJjLmRlZi0iCkYgIiAgICAgIgpGICJJVCdTIE5PUk1BTCIKRiAi4oCiwqXCpeKCrD8_PyEhISIKRiAiYWJjXG5kZWYiCg==" rel="nofollow noreferrer">Try it here!</a></p>
+<p>Requires an <code># Experimental!</code> comment at the beginning.</p>
+<p>Formats to <code>/+¬∈⊂⟜¯+stringifyA ⇡⌊+πⁿπ e</code>.</p>
 <h2>Explanation</h2>
-<pre><code>/+¬∊:⊂⟜¯+stringifyA ⇡+⌊η°√+⌈π⌊η
-                      +⌊η°√+⌈π⌊η pushes 26
-                     ⇡           gets all whole numbers less than 26
-          stringifyA               pushes @A
-         +                         shifts @A by each of [0 1 2 3 ... 25], resulting in the uppercase alphabet
-     ⊂⟜¯                          joins the array with itself lowercase
-  ¬∊:                              checks for each element in the original string whether it's NOT in that array
-/+                                 get the sum of the elements
+<pre><code>/+¬∈⊂⟜¯+stringifyA ⇡⌊+πⁿπ e
+                     ⌊+πⁿπ e pushes 26
+                    ⇡        gets all whole numbers less than 26
+         stringifyA          pushes &quot;A&quot;
+        +                    shifts &quot;A&quot; by each of [0 1 2 3 ... 25], resulting in the uppercase alphabet
+    ⊂⟜¯                     joins the array with itself lowercase
+  ¬∈                         checks for each element in the original string whether it's NOT in that array
+/+                           get the sum of the elements
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, score 2, 14 bytes</h1>
