--- a/q/183390.html
+++ b/q/183390.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>043</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
-<tr d-ix="1"><td>008</td><td>Jelly</td><td>201030T113958Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/214421#214421">ais523</a></td></tr>
-<tr d-ix="2"><td>118</td><td>TSQL</td><td>190418T035042Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183428#183428">t-clause</a></td></tr>
-<tr d-ix="3"><td>047</td><td>J</td><td>190419T045248Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183477#183477">Jonah</a></td></tr>
-<tr d-ix="4"><td>107</td><td>R</td><td>190421T071646Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183541#183541">digEmAll</a></td></tr>
-<tr d-ix="5"><td>125</td><td>R</td><td>190418T135623Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183445#183445">Giuseppe</a></td></tr>
-<tr d-ix="6"><td>065</td><td>Python 2</td><td>190419T230435Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183510#183510">Chas Bro</a></td></tr>
-<tr d-ix="7"><td>021</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
+<tr d-ix="0"><td>009</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
+<tr d-ix="1"><td>043</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
+<tr d-ix="2"><td>008</td><td>Jelly</td><td>201030T113958Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/214421#214421">ais523</a></td></tr>
+<tr d-ix="3"><td>118</td><td>TSQL</td><td>190418T035042Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183428#183428">t-clause</a></td></tr>
+<tr d-ix="4"><td>047</td><td>J</td><td>190419T045248Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183477#183477">Jonah</a></td></tr>
+<tr d-ix="5"><td>107</td><td>R</td><td>190421T071646Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183541#183541">digEmAll</a></td></tr>
+<tr d-ix="6"><td>125</td><td>R</td><td>190418T135623Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183445#183445">Giuseppe</a></td></tr>
+<tr d-ix="7"><td>065</td><td>Python 2</td><td>190419T230435Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183510#183510">Chas Bro</a></td></tr>
 <tr d-ix="8"><td>060</td><td>Haskell</td><td>190419T015033Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183470#183470">xnor</a></td></tr>
 <tr d-ix="9"><td>022</td><td>Japt h</td><td>190418T201038Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183462#183462">Gymhgy</a></td></tr>
 <tr d-ix="10"><td>024</td><td>Gaia</td><td>190418T185957Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183459#183459">Giuseppe</a></td></tr>
@@ -48,13 +48,19 @@
 <tr d-ix="19"><td>019</td><td>Pyth</td><td>190417T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183391#183391">Sok</a></td></tr>
 <tr d-ix="20"><td>144</td><td>Wolfram Language Mathematica</td><td>190417T143335Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183395#183395">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> 43 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p><s>Ever have one of those challenges where you completely forget how to golf?!</s><br><strong><em>Much</em></strong> better :D</p>
+<pre><code>à më fÊñx
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LWg&amp;code=4CBt6yBmyvF4&amp;input=Wy01LC0xOCwtMywtMSwtMTBdCi1R" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> 43 bytes</h1>
 <pre><code>Union@Subsets[#][[2;;,;;;;2]]~MaximalBy~Tr&amp;
 </code></pre>
 <p><a href="https://tio.run/##JU/LCsIwELz3NwQPsotJ@rClFIp3QVBPpYcoLQZshTaCUtpfr7tJNgmTyc5M0mn7bDptzUOvbbHeevPuy8vnPjZ2rDZ1Vak8h5yGquvlpL@m06/jb7kO29U2ox2LKZgkKAgBJWBIKJ4hmCKIIYKQYUxQCpq8/K0UbgcqBiQ7UDcqiDzvTx4rdkX2SwAPzKXkhKEEQRUp6laJc2FdCkjBxLsEwihTZ0CP86nC@7Ecs4xDxRzMwXkwvS137b5031r/" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/214421/81203">ais523's Jelly solution</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>ŒPm€2SÞṪ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///opIDcR01rjIIPz3u4c9X///@jDXWMdIx1dA11dI2BLNNYAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -71,7 +77,7 @@
 <p>The basic idea is that we don't look for the subsequence we want directly; rather, we find a subsequence with an additional element inserted in between each of the elements we want. This is always possible if the elements of the subsequence we want are not adjacent in the original list (because there'll always be at least one in between to insert), and never possible if the elements of the subsequence we want are adjacent in the original list. So all we have to do is look at all the subsequences of the input, then take alternating elements from them, to get a list of all the non-adjacent-item subsequences of the input.</p>
 <p>This algorithm will return many of the non-adjacent-item subsequences more than once, but that doesn't matter, because we're just looking for a maximal element, and repeating elements of the set we're taking a maximum of has no influence on the maximum.</p>
 </div>
-<div id="pu2" class="pu"><h1>T-SQL, <s>122</s> <s>119</s> 118 bytes</h1>
+<div id="pu3" class="pu"><h1>T-SQL, <s>122</s> <s>119</s> 118 bytes</h1>
 <p>Input is a table variable.</p>
 <p>This query picks all elements from the table variable, combining these with all non-adjacent elements with higher position values and show the text generated for the highest sum of these values.</p>
 <pre class="lang-sql prettyprint-override"><code>WITH C(y,j,v)as(SELECT*,x*1FROM @
@@ -82,7 +88,7 @@ TOP 1y FROM C ORDER BY-v
 </code></pre>
 <p><strong><a href="https://data.stackexchange.com/stackoverflow/query/1032334/maximum-summed-powersets-with-non-adjacent-items" rel="nofollow noreferrer">Try it online</a></strong> ungolfed</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 47 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 47 bytes</h1>
 <pre><code>&gt;@{:@(&lt;@#~/:+/@#~)1(-#~0=1 1+/@E.&quot;1-)[:i.&amp;.#.=~
 </code></pre>
 <p><a href="https://tio.run/##RVDLTsMwELz7K0a1RBNBXK9jN6lFUASCE@LAtVJ9qKgoFz4AkV8P65eIFXl2xrsz9te6UdsLJo8t7qDh@e8Unt5fX9aH@cfPzf0sl52/3fHWUtPJRU8E4vpZbahrj/6qbpRU07K2Qrw9KnycP7/RHL3086@ar8qcZAtCDydE0hJG53FhaLgIhNAzcll3TCXVMrToK0ta1z6XysTwVvoYTXGmrjZUTXhlbuB5iWO/iIOBrUrqrWz@smSw/0/LjSHm2iMMWR45xGDKkViEnvgVNayhKJRTsLpYR5MRwUXGlrBMRn8mA43JhN@k3iTfS2fvODscDjGkFusf" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
@@ -93,7 +99,7 @@ TOP 1y FROM C ORDER BY-v
 </code></pre>
 <p><a href="https://tio.run/##VVBBTsMwELznFaNEoo1KHa9jN6lFKgsEJ8SBa1V8QFTAhQcg@vWwa8dCZBV5d2bHM8nnXKvVGZPHCtfQ8PxuFe6eHx/mo18fwrcPnd90V4f2dBOaS02MNhc9EWjThXtV06k9@saHHxU@lHlp5raqnm4V3l7fv7D@R7Ug9HBVlbjUY@tx5tbwEAmx585l3nIl1vKaRZ9RB9K66FwaE8LHouNukjt1saFiwpWxoVzNftJHA1uYpC1ofjJlsPtLy8IouXaIQ6ZHDqExmGVJxtgTBLSGhFj2YPViLjYjohPELnEZlAQMRhqTDf@V8i06VRLrHEEM4n4vWXU1/wI" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>108</s> 107 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>108</s> 107 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>function(v,M=-Inf){for(j in J&lt;-seq(a=v))for(i in combn(J,j,,F))if(all(diff(i)&gt;1)&amp;sum(v[i])&gt;sum(M))M=v[i]
 M}
@@ -101,7 +107,7 @@ M}
 <p><a href="https://tio.run/##lZLfa8IwEMff/SsCwkjgwpL@0AqrDwMHyrrJqk@SB@cWiGhlOn0Z@9u7u1Y7Z@3DkrYkl376/d5dt7mNc7vPFp9uk/EDJLEcZlZ82c2WL5nL2OhO7t4/@Dw@CEFBR8HFZv2a8REsAR6EcJbPVyv@5qzlTvS1uNnt1/wwc0b0aZUIkcS0bSXfeZsNn8bTCbs@xs9pOrx/HLCXQTp9nKSttvzXaFm@4Bo88EFqkD6uQiHKb7cZm2k8CE1NtsACCCEA//T6aRAWQGBuZyH4po6FiGmFF91/1cIiWtMrTapLoV@TylyrzTE3nHWyzE2bJgwr0cXkpAfBOUwYxk2zWkldCBbYVY@sagAqSqpoB2T3iBPmQadRLcJiSV@Dwhl4qO11iCSMjnCLTaBVua5yI5cRSOwecuq8ARHuTVNJQvxFosIn/ilVOwiTurkBqsyMXMpejyqqTiYV2kNz5RMq4fwH" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
 <p>-1 thanks to @Giuseppe</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>136</s> 125 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>136</s> 125 bytes</h1>
 
 
 
@@ -118,7 +124,7 @@ M}
 
 <p><s>I'm pretty sure this is the first R answer I've ever written that uses <code>Filter</code>!</s> sad, <code>Filter</code> is ungolfy, no wonder I've never used it...</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>63</s> <s>70</s> 65 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, <s>63</s> <s>70</s> 65 bytes</h1>
 
 
 
@@ -128,30 +134,6 @@ M}
 <p><a href="https://tio.run/##XVBda8MwDHxef4UeEyaD7TgfDfSXGD94dGFlS1raDtZfn@rkZQ8DW5zOp5Osy@P@cV78uk6Hrzy/HTPlUe5ypDn/VDHH0SXW@DpVOfox1QzgBCT@fH8cbt9zfb5SXidEphudFopVdNxzSEx9zYSMPFPDZASZRrNWXvf6GiRhktgINSjVKuUsri0Aeuds8bNI7OaNI4TXHPa92hnpErRqE278v8FQYsoUnaD@b4wBzU0jKqsneJj4Dqat70q/4juIEL@ACtOF4gDOuOG3B36vsxtXp3H3crmeljvWJksVuSyzAgJcnw" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 
 <p>5 bytes thx to <a href="https://codegolf.stackexchange.com/users/82577/arbo">ArBo</a></p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, 21 bytes</h1>
-<p>Ever have one of those challenges where you completely forget how to golf?!</p>
-<pre><code>ð¤à fÊk_än ø1Ã®mgUÃñx
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LWg&amp;code=8KTgIGbKa1/kbiD4McOubWdVw/F4&amp;input=Wy01LC0xOCwtMywtMSwtMTBdCi1R" rel="nofollow noreferrer">Try it</a></p>
-<pre><code>ð¤à fÊk_än ø1Ã®mgUÃñx     :Implicit input of array U
-ð                         :Indices of elements that return true when
- ¤                        :  Converted to a base-2 string (to account for 0s)
-  à                       :Combinations
-    f                     :Filter by
-     Ê                    :  Length (to remove the empty combination)
-      k_                  :Remove elements that return true
-        än                :  Deltas
-           ø1             :  Contains 1
-             Ã            :End remove
-              ®           :Map
-               m          :  Map
-                gU        :    Index into U
-                  Ã       :End map
-                   ñ      :Sort by
-                    x     :  Sum
-                          :Implicit output of last element
-</code></pre>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://www.haskell.org/" rel="noreferrer">Haskell</a>, 60 bytes</h1>
 
