--- a/q/274951.html
+++ b/q/274951.html
@@ -65,6 +65,10 @@
 <pre><code>»»§ηθ
 </code></pre>
 <p>Output the square for <code>n</code>.</p>
+<p>108 bytes for a slightly less forceful version:</p>
+<pre><code>Ｎθ≔⦃⁰⟦0⟧¹⟦1⟧⦄ηＷ∧¬§ηθη«≔⦃⦄η≔ΦＥιλ¬›×κκθζＦζＦζＦζＦζ«≔ΣＸ⟦νμλκ⟧²ε≔⁺Ｅ§ιν⁺ξ§§ιμπＥ§ιλ⁺ξ§§ικπδ¿∨¬§ηε‹ΣΣδΣΣ§ηε§≔ηεδ»»§ηθ
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=fVHdToMwFI6X8hQnXJWkSzZvXNwVN5olOkn0jnDBoEhDKYyCW7bwJN4sRqPP5Ev4Cp52NJlLlATafuf7OYe-fCZ53CRVLPb7967NRtOvs--5rLt20ZVL1pCVN3N8pfiTJLvxFYTu2I0oTPRu4kY9hRwJ65wLBsSXKVlULfHbuUzZhuQUVp6nKR7snHNrM4js-ZqLFoPu4ppwCgL52uOmYbGGH3nJFCkoFJ5xw-9Wi7OqAbL14K8V82zAQ1eSoFqjWSgplJiBbjjEhTZj2swyA9Ep04idABuSSDL4hoKFj8ollmvT1olO_K8rBh0uqWmBZ0Dum9P_xzThlillptBvqhF7-M3UDxxGOS4MCb3TO0HD5en9zN7UMlHD7X-E7uhZuNHr5fQA_AA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: As above but when generating the list of possible solutions, excludes values whose square exceeds the input.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>812</s> 806 bytes</h1>
 <pre><code>:z;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tz;s/0//g
