--- a/q/183390.html
+++ b/q/183390.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Japt h</td><td>190417T214932Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183416#183416">Shaggy</a></td></tr>
 <tr d-ix="1"><td>043</td><td>Wolfram Language Mathematica</td><td>190418T081627Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183434#183434">att</a></td></tr>
 <tr d-ix="2"><td>008</td><td>Jelly</td><td>201030T113958Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/214421#214421">ais523</a></td></tr>
 <tr d-ix="3"><td>118</td><td>TSQL</td><td>190418T035042Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183428#183428">t-clause</a></td></tr>
@@ -48,11 +48,19 @@
 <tr d-ix="19"><td>019</td><td>Pyth</td><td>190417T134011Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183391#183391">Sok</a></td></tr>
 <tr d-ix="20"><td>144</td><td>Wolfram Language Mathematica</td><td>190417T143335Z</td><td><a href="https://codegolf.stackexchange.com/questions/183390/maximum-summed-subsequences-with-non-adjacent-items/183395#183395">ZaMoC</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-h</code></a>, <s>21</s> <s>9</s> 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p><s>Ever have one of those challenges where you completely forget how to golf?!</s><br><strong><em>Much</em></strong> better :D</p>
-<pre><code>à më fÊñx
+<pre><code>à có ñx
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LWg&amp;code=4CBt6yBmyvF4&amp;input=Wy01LC0xOCwtMywtMSwtMTBdCi1R" rel="nofollow noreferrer">Try it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LWg&amp;code=4CBj8yDxeA&amp;input=Wy01LC0xOCwtMywtMSwtMTBdCi1R" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>à có ñx     :Implicit input of array
+à           :Combinations
+  c         :Flat map
+   ó        :  Uninterleave
+     ñ      :Sort by
+      x     :  Sum
+            :Implicit out put of last sub-array
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>70</s> <s>63</s> <s>58</s> 43 bytes</h1>
 <pre><code>Union@Subsets[#][[2;;,;;;;2]]~MaximalBy~Tr&amp;
