--- a/q/274951.html
+++ b/q/274951.html
@@ -26,12 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
-<tr d-ix="1"><td>806</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="0"><td>803</td><td>sed 4.2.2 r</td><td>240815T125547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274997#274997">guest430</a></td></tr>
+<tr d-ix="1"><td>101</td><td>Charcoal</td><td>240816T084104Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/275008#275008">Neil</a></td></tr>
 <tr d-ix="2"><td>048</td><td>Pyth</td><td>240814T221156Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274988#274988">CursorCo</a></td></tr>
 <tr d-ix="3"><td>044</td><td>05AB1E</td><td>240814T083430Z</td><td><a href="https://codegolf.stackexchange.com/questions/274951/sum-of-four-squares-grid/274969#274969">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 101 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>812</s> <s>806</s> 803 bytes</h1>
+<pre><code>:a;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ta;s/0//g
+h;z;s/^/0/
+:;H;y/10/!@/
+:b;s/^/\n/
+:c;s/^/#/
+:d;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;td
+s/(.*)\n(.*)/sed -rn 's!(^| )([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})($| )! \\2 \\3 \\4 \\5 \\6 \\7 \\8 \\9 \\n!;t;i\1\\n\2\nba;:;p;:a'&lt;&lt;&lt;'\2'/e
+T;s/ (.+) (.+) (.+) (.+) (.+) (.+) (.+) (.+) \n/ \1\3 \2\4 \5\7 \6\8  /
+tf;/^1.{,5}$/bf
+:e;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;te;s/0//g
+bc;:f;/[@!]{5}/bb;s/.*\n//
+s/[!@]/&amp; /g;y/ /\n/
+:g;s/@\n@/@/;s/@\n!/!/;s/!\n@/!/;s/!\n!/!!/;tg
+/^\n*!*\n*$/!s/.*/sed -rn 'h;s!.!!;x;:;s!.*!\&amp;!mp;T;x;s!.!!;x;t'&lt;&lt;&lt;'&amp;'/e
+s/\n(\n*)/\1/g;/\n/bg;y/!/#/
+G;s/\n0.*//;T
+s/^(#*)\n\1$//;th
+g;s/.*\n//;T
+s/10(0*)(1*)$/01\2\1/;t
+s/(0*)0(1*)/\21\1/;t
+y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
+:h;x;s/.*\n//
+</code></pre>
+<p><a href="https://tio.run/##rVLBjpswEL37K2yBEnAbxmZDdsFoxa39gNziRQobluyhbLRwaLvNr5e@Ic322kpFGvT8xn5jv5mhPUxTsXcD7ewqf6BFQJ37Rja9WWeb27uczBUS9gSG8oDcyPsNUSeO7jtgjYUo3Gc@aEhVWDQz7XvAxxkGQAeWoLJ8Vw@MvWfdKInLRHsbBTqJE31PPkWVg@CMjn3Pfxrag1y99nI5qKj@IeNoV6mHN2/P/wuFEFXS@xRxg1gjMsQGcYu4Q@SIXrnRPXsL5FPfN3tXuJMr9suyLJc@XVIrtniUjJIP8d/84JKEGkqmXDPjYhtUkyTGJ0e1Td4@ZueQmidRtP/YqfbaqebRFRCbX5udqeEGwfKeCC7vVAVBOQvKS9c65CvfV1TRBSlSjBRzVwQOcOwE1b7XCnI6JMXCf7p1dINKlHJf4RKQVn6hvpzcFsQ1Mc7OLdi4AdUjyMTkLa7Dd2n4VooH6JPjtIE6uS221pgXTIe3IYjxKLr3N81payKj48jqOIQ5MNdiF88UWMM0xsxeSPgIm@bjtMDHXHHkK/4WnCYrUrEWmch/vpzG55d@mFavvwA" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
+<p>(I'll come back to golf this, clean up the formatting a bit more, and add an explanation later, but it's working and I want sleep. basically it does the same thing the other answers are; generating an infinite list of binary matrices in the right order and outputting the first one that matches the input. since there's no numbers in sed, that first step is so much easier than the second...)</p>
+<p>I didn't even put the base conversion things in the header/footer this time so that byte count includes everything. you give it a decimal number and it outputs the binary number.</p>
+<p>oh yeah, if you want to check the matrices are in the right order <a href="https://tio.run/##JcsxCoAwEETRfs8hEgM6u5bmAh7AMqUiNiYYGy/vusGpPg@mbKvqTBPNlGmngsHHEwiLpbBj3znxXQOWOEZBuM2rcmXEUX58IGCEekdrM1PlN@X7SGfR/voA" rel="nofollow noreferrer">this</a> outputs matrices infinitely starting at whatever matrix you input</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 101 bytes</h1>
 <pre><code>Ｎθ≔⦃⁰⟦0⟧¹⟦1⟧⦄ηＷ∧¬§ηθη«≔⦃⦄η≔ＥιλζＦζＦζＦζＦζ«≔ΣＸ⟦νμλκ⟧²ε≔⁺Ｅ§ιν⁺ξ§§ιμπＥ§ιλ⁺ξ§§ικπδ¿∨¬§ηε‹ΣΣδΣΣ§ηε§≔ηεδ»»§ηθ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fVFBasMwEKTH-hWLThIoEBcKpTn5GEhSQ4_GB8eWaxFZdiS7CQl-SS-htLRf6Rf6mkqOBamhFQhpZ2dmd6WXz7RIVFol4nR6b5t8cvd99TWXddus2nLNFN6SmRdozZ8kPk7vIUJTFFPw7c1HcUehMIRdwQUDHMgMr6oGB81cZmyPCwpbQiyFwNG7djaDyMXLpMacgjDEg4XzSgE-EPjrNE5O-tiWOKx2ps1IUiiNCYWNae_GVmXWzDFD0eq-kuvNVJSG1ON7Cg6-SJcmXRPrNNKJ_3WbQWeOrG-B54Af1PhlmCUsmNb9FHZnFnHBb6ZdcB7lMjFU6LzOCxWX45efvel1qod__YjQ5Fmg-NW_PQM_" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: Lots of brute force, so can only solve inputs with <code>4×4</code> outputs before the heat death of the universe.</p>
@@ -69,36 +99,6 @@
 <pre><code>Ｎθ≔⦃⁰⟦0⟧¹⟦1⟧⦄ηＷ∧¬§ηθη«≔⦃⦄η≔ΦＥιλ¬›×κκθζＦζＦζＦζＦζ«≔ΣＸ⟦νμλκ⟧²ε≔⁺Ｅ§ιν⁺ξ§§ιμπＥ§ιλ⁺ξ§§ικπδ¿∨¬§ηε‹ΣΣδΣΣ§ηε§≔ηεδ»»§ηθ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fVHdToMwFI6X8hQnXJWkSzZvXNwVN5olOkn0jnDBoEhDKYyCW7bwJN4sRqPP5Ev4Cp52NJlLlATafuf7OYe-fCZ53CRVLPb7967NRtOvs--5rLt20ZVL1pCVN3N8pfiTJLvxFYTu2I0oTPRu4kY9hRwJ65wLBsSXKVlULfHbuUzZhuQUVp6nKR7snHNrM4js-ZqLFoPu4ppwCgL52uOmYbGGH3nJFCkoFJ5xw-9Wi7OqAbL14K8V82zAQ1eSoFqjWSgplJiBbjjEhTZj2swyA9Ep04idABuSSDL4hoKFj8ollmvT1olO_K8rBh0uqWmBZ0Dum9P_xzThlillptBvqhF7-M3UDxxGOS4MCb3TO0HD5en9zN7UMlHD7X-E7uhZuNHr5fQA_AA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: As above but when generating the list of possible solutions, excludes values whose square exceeds the input.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <s>812</s> 806 bytes</h1>
-<pre><code>:z;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;tz;s/0//g
-h;z;s/^/0/
-:;H;y/10/!@/
-:c;s/^/\n/
-:x;s/^/#/
-:a;s/#/&lt;&lt;123456789#01&gt;/;s/(.)&lt;.*\1(#*.).*&gt;/\2/;ta
-s/(.*)\n(.*)/sed -rn 's!(^| )([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})([@!]{\1})($| )! \\2 \\3 \\4 \\5 \\6 \\7 \\8 \\9 \\n!;t;i\1\\n\2\nba;:;p;:a'&lt;&lt;&lt;'\2'/e
-T;s/ (.+) (.+) (.+) (.+) (.+) (.+) (.+) (.+) \n/ \1\3 \2\4 \5\7 \6\8  /
-tb;/^1.{,5}$/bb
-:y;s/[1-9]/&amp;#/g;y/123456789/012345678/;s/#0/9#/;ty;s/0//g
-bx;:b;/[@!]{5}/bc;s/.*\n//
-s/[!@]/&amp; /g;y/ /\n/
-:f;:e;s/@\n@/@/;s/@\n!/!/;s/!\n@/!/;s/!\n!/!!/;te
-/^\n*!*\n*$/!s/.*/sed -rn 'h;s!.!!;x;:;s!.*!\&amp;!mp;T;x;s!.!!;x;t'&lt;&lt;&lt;'&amp;'/e
-s/\n(\n*)/\1/g;/\n/bf;y/!/#/
-G;s/\n0.*//;T
-s/^(#*)\n\1$//;tr
-g;s/.*\n//;T
-s/10(0*)(1*)$/01\2\1/;t
-s/(0*)0(1*)/\21\1/;t
-y/1/0/;s/.*/&amp;&amp;&amp;&amp;/;t
-:r;x;s/.*\n//
-</code></pre>
-<p><a href="https://tio.run/##rVLBbptAEL3vV@wKZMO2ZlhinMCiiFvzAb55g2QS4uTQjWU4xE3966VvcJ1eWylIgx5vhzezb6bvHsex/GF72phFcU@zgHb2SCa7Wuar65uC0gsk5AQpFQHZgfNTop14tgwbfIjS3vGPKakaHw8T7Tzg2wQDoC1LUFV9qAepuWXdKImrRDsTBTqJE31LLkOVreATHTvPb@q7R7k4eDnvVdT8lHG0qdX9uzOnz0IhRJV0LkNcIZaIHLFCXCNuEAXCKzvYF2eAXOZ8u7Wl3dtyO6@qau6yOXVijUvJKPkS/8sLLkmooWTGNXMutkI1SWJoLTUmef@an0JqW1Ee/3NSx8uk2jdbQmy6bX6ilgcEyz0RXN6oGoJyEpTnqT3ZskNK7XxNNZ2RIsVIMXdB4ACHTlDjvFZQ1CEp1v47sGfbq0QpixYYaeVm6vverkFcDobJvBl716OBCDIxOYOOuJ32CY0p3qFvlo9TqJNdI7XBymBBnAlBDAex@7jWdGzSKNVxZHQcwh/4a5DFawU2ZRqbZs4krIRT0@80w8NceeAW/wiOoxGZWIpcFL9e98PLq@/HxeE3" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>did you know sed is turing complete? I happen to know that, and it makes me do things I shouldn't...</p>
-<p>(I'll come back to golf this, clean up the formatting, and add an explanation later, but it's working and I want sleep. basically it does the same thing the other answers are; generating an infinite list of binary matrices in the right order and outputting the first one that matches the input. since there's no numbers in sed, that first step is so much easier than the second...)</p>
-<p>I didn't even put the base conversion things in the header/footer this time so that byte count includes everything. you give it a decimal number and it outputs the binary number.</p>
-<p>oh yeah, if you want to check the matrices are in the right order <a href="https://tio.run/##JcsxCoAwEETRfs8hEgM6u5bmAh7AMqUiNiYYGy/vusGpPg@mbKvqTBPNlGmngsHHEwiLpbBj3znxXQOWOEZBuM2rcmXEUX58IGCEekdrM1PlN@X7SGfR/voA" rel="nofollow noreferrer">this</a> outputs matrices infinitely starting at whatever matrix you input</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/isaacg1/pyth" rel="nofollow noreferrer">Pyth</a>, 48 bytes</h1>
 <pre><code>M?Gho_SsNmsCMc2sgLtGdfqHs*VTT^UhH4]]Hgf&gt;2eSsgTQZ
