--- a/q/187510.html
+++ b/q/187510.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Wolfram Language Mathematica</td><td>190702T161624Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187579#187579">att</a></td></tr>
-<tr d-ix="1"><td>011</td><td>Vyxal</td><td>221109T222711Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254420#254420">emanresu</a></td></tr>
-<tr d-ix="2"><td>1020</td><td>Nibbles</td><td>221108T163629Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254366#254366">Dominic </a></td></tr>
+<tr d-ix="0"><td>1785</td><td>Nibbles</td><td>221108T163629Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254366#254366">Dominic </a></td></tr>
+<tr d-ix="1"><td>038</td><td>Wolfram Language Mathematica</td><td>190702T161624Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187579#187579">att</a></td></tr>
+<tr d-ix="2"><td>011</td><td>Vyxal</td><td>221109T222711Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254420#254420">emanresu</a></td></tr>
 <tr d-ix="3"><td>011</td><td>Husk</td><td>221108T152943Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/254364#254364">Dominic </a></td></tr>
 <tr d-ix="4"><td>069</td><td>Python 3</td><td>190705T010559Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187698#187698">Dat</a></td></tr>
 <tr d-ix="5"><td>099</td><td>Retina 0.8.2</td><td>190701T230358Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187551#187551">Neil</a></td></tr>
@@ -61,33 +61,12 @@
 <tr d-ix="32"><td>060</td><td>Python 2</td><td>190701T081417Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187512#187512">TFeld</a></td></tr>
 <tr d-ix="33"><td>017</td><td>Charcoal</td><td>190701T084711Z</td><td><a href="https://codegolf.stackexchange.com/questions/187510/do-the-26-richest-billionaires-own-as-much-wealth-as-the-poorest-3-8-billion-peo/187513#187513">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>40</s> 38 bytes</h1>
-<pre><code>Drop@##//.a_/;Tr@a&gt;Tr@Take@##:&gt;Rest@a&amp;
+<div id="pu0" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, <s>20</s> 17 nibbles (8.5 bytes)</h1>
+<p><em>Edit: -3 nibbles using scan-append <code> `\$:</code> as a more efficient way to generate prefixes</em></p>
+<pre><code>/|\`\&gt;@$:++&lt;_@-~+
 </code></pre>
-<p><a href="https://tio.run/##dU/LasMwELznNww5jWq9NrZbYnTIB4SSWylFFIeGkjY4vhl/uzNSk4Yeyu4I7c4wu3uMw0d3jMPhPc779bzpv0@hKMryIb6VT7s@xJbPLn527D62z915CHE5b/vD1/BSqHYfQvG6LMO4GEfRGpYwcoUVGNaVpBSmhtdwOS35nDUkh4NlGGgoC@Um2Ak0pSKzt7rKoiTxUAJFXhlSVWZ/jfUPw0I5PcFcvThakNYS/Bs3tb77y30bWjRNQ9Ro@K/TfasVhKYJPo3w6XYiXUe6gnNs5J3o6Akr@u@Baehimi8" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
-<pre><code>Drop@##                                 exclude first n values
-       //.a_                 :&gt;Rest@a   drop from suffix
-       //.  /;Tr@a&gt;Tr@Take@##             until suffix sum &lt;= head sum 
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 11 bytes</h1>
-<pre><code>Ẏ∑£ȯÞK≬∑¥≤∵
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCLhuo7iiJHCo8ivw55L4oms4oiRwqXiiaTiiLUiLCIiLCJbMTAsIDUsIDUsIDNdXG4yIl0=" rel="nofollow noreferrer">Try it Online!</a> Fixed thanks to one of the Sʨɠɠans.</p>
-<pre><code> ∑          # Sum
-Ẏ           # Of first n
-  £         # Stored to register
-   ȯÞK      # Suffixes of rest
-          ∵ # Maxmimum by...
-      ≬---  # Next 3 as lambda...
-       ∑    # Sum
-         ≤  # Is less than (or equal to)
-        ¥   # Register?
-</code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 10 bytes (20 nibbles)</h1>
-<pre><code>/|.`,,$&gt;$&gt;_@++&lt;_@-~+
-</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWG_VrYhJi7BxUrLS1beIddOu0IeJQ6V3RStGGBgY6lgY6pjomOsY6RjqGsUo6SkZKsVAVAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Previous version:</p>
 <pre><code>  .                     # map over
    `,                   # range from zero up to 
      ,$                 # length of arg1 minus 1
@@ -106,7 +85,30 @@
                         #   returning the left arg each time
                         #   (so, output the first filtered list)
 </code></pre>
-<p><a href="https://i.sstatic.net/o6rez.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/o6rez.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>40</s> 38 bytes</h1>
+<pre><code>Drop@##//.a_/;Tr@a&gt;Tr@Take@##:&gt;Rest@a&amp;
+</code></pre>
+<p><a href="https://tio.run/##dU/LasMwELznNww5jWq9NrZbYnTIB4SSWylFFIeGkjY4vhl/uzNSk4Yeyu4I7c4wu3uMw0d3jMPhPc779bzpv0@hKMryIb6VT7s@xJbPLn527D62z915CHE5b/vD1/BSqHYfQvG6LMO4GEfRGpYwcoUVGNaVpBSmhtdwOS35nDUkh4NlGGgoC@Um2Ak0pSKzt7rKoiTxUAJFXhlSVWZ/jfUPw0I5PcFcvThakNYS/Bs3tb77y30bWjRNQ9Ro@K/TfasVhKYJPo3w6XYiXUe6gnNs5J3o6Akr@u@Baehimi8" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<pre><code>Drop@##                                 exclude first n values
+       //.a_                 :&gt;Rest@a   drop from suffix
+       //.  /;Tr@a&gt;Tr@Take@##             until suffix sum &lt;= head sum 
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 11 bytes</h1>
+<pre><code>Ẏ∑£ȯÞK≬∑¥≤∵
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCLhuo7iiJHCo8ivw55L4oms4oiRwqXiiaTiiLUiLCIiLCJbMTAsIDUsIDUsIDNdXG4yIl0=" rel="nofollow noreferrer">Try it Online!</a> Fixed thanks to one of the Sʨɠɠans.</p>
+<pre><code> ∑          # Sum
+Ẏ           # Of first n
+  £         # Stored to register
+   ȯÞK      # Suffixes of rest
+          ∵ # Maxmimum by...
+      ≬---  # Next 3 as lambda...
+       ∑    # Sum
+         ≤  # Is less than (or equal to)
+        ¥   # Register?
+</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 11 bytes</h1>
 <pre><code>ḟ(≤Σ↑¹³Σ)ṫ↓
